@@ -1555,6 +1555,8 @@ Release 0.18.3 - Unreleased
     HADOOP-4857. Fixes TestUlimit to have exactly 1 map in the jobs spawned.
     (Ravi Gummadi via ddas)
 
+    HADOOP-4810. Data lost at cluster startup time. (hairong)
+
 Release 0.18.2 - 2008-11-03
 
   BUG FIXES
